@@ -596,11 +596,7 @@ void perl_startup (server_rec *s, pool *p)
     if(PERL_STARTUP_DONE_CHECK && !getenv("PERL_STARTUP_DONE")) {
 	MP_TRACE_g(fprintf(stderr, 
 			   "mod_perl: PerlModule,PerlRequire postponed\n"));
-#ifndef WIN32
-	setenv("PERL_STARTUP_DONE", "1", 1);
-#else
-	SetEnvironmentVariable("PERL_STARTUP_DONE", "1");
-#endif
+	my_setenv("PERL_STARTUP_DONE", "1");
 	saveINC;
 	Apache__ServerStarting(FALSE);
 	return;
@@ -1368,6 +1364,19 @@ callback:
 	MP_STORE_ERROR(r->uri, ERRSV);
 	if(!perl_sv_is_http_code(ERRSV, &status))
 	    status = SERVER_ERROR;
+#if MODULE_MAGIC_NUMBER >= MMN_130
+	if(!SvREFCNT(TOPs)) {
+#ifdef WIN32
+	    mod_perl_error(r->server,
+			   "mod_perl: stack is corrupt, server may need restart\n");
+#else
+	    mod_perl_error(r->server,
+			   "mod_perl: stack is corrupt, exiting process\n");
+	    my_setenv("PERL_DESTRUCT_LEVEL", "-1");
+	    child_terminate(r);
+#endif /*WIN32*/
+	}
+#endif
     }
     else if(count != 1) {
 	mod_perl_error(r->server,
