@@ -8,6 +8,10 @@ Changes - Apache mod_perl change logfile
 
 =item 1.15_01-dev
 
+a Perl syntax error may corrupt the Perl stack, rendering the
+process useless, so we now child_terminate() if this is the case  
+(thanks to Ken Williams for the Apache::Death bug illustration)
+
 <Perl> sections will now report configuration syntax errors
 
 USE_DSO=1 should work now
